--- a/templates/about.html
+++ b/templates/about.html
@@ -2,7 +2,7 @@
 {% block title %}Predict — BTC{% endblock %}
 {% block content %}
     <br />
-    <div class="container text-center">
+    <div class="container text-center text-dark card">
   <h1>Information</h1>
   <br />
   <h3>
