--- a/templates/prediksi.html
+++ b/templates/prediksi.html
@@ -41,9 +41,10 @@
         </form>
         <br />
         <br />
-        {{ bu }}
+
         <br>
-        {{ prediction_text }}
-      </div>
+        <div class="card bg-dark">
+          {{ prediction_text }}
+        </div>
     </div>
     {% endblock %}
